# satysfi-class-mdbook-satysfi

./: .gitignore  README.md  Satyristes  satysfi-class-mdbook-satysfi-doc.opam  satysfi-class-mdbook-satysfi.opam
doc/: class-mdbook-satysfi-demo.saty
src/: mdbook-satysfi.satyh
